@@ -1,3 +1,9 @@
+2008-10-08  Christian Persch  <chpe@gnome.org>
+
+        Bug 555314 – mem leak in gmarkup
+
+        * glib/gmarkup.c: (g_markup_parse_context_parse): Plug a mem leak.
+
 2008-10-08  Tor Lillqvist  <tml@novell.com>
 
 	Bug 554790 - g_convert() misbehaves with winiconv versions
